--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -81,34 +81,10 @@
                     <input type="text" id="telefono">
                 </div>
 
-            <div>
-                    <!-- una consulta un poco sin sentido -->
-                    <label for="select" >Estado civil</label>
-                    <select id="select" class="fuente-contacto-select">
-                        <option disabled>Selecciona una opción</option>
-                        <option value="">Soltero</option>
-                        <option value="">Casado</option>
-                        <option value="">Feliz</option>
-                    </select>
-            </div>
-
                 <div>
-                    <label for="mensaje">Comentanos tu incidencia</label>
+                    <label for="mensaje">Envianos un mensaje y te ayudaremos</label>
                     <textarea id="mensaje" cols="30" rows="10"></textarea>
                 </div>
-
-                <p class="fuente">
-                    Selecciona las referencias sobre tus incidentes
-                </p>
-
-                <label for="opcion 1" class="fuente">Mi pc no enciende</label>
-                <input type="radio" name="opciones" id="opcion 1">
-
-                <label for="opcion 2" class="fuente">Mi pc esta lenta</label>
-                <input type="radio" name="opciones" id="opcion 2">
-
-                <label for="opcion 3" class="fuente">No funciona internet</label>
-                <input type="radio" name="opciones" id="opcion 3">
 
                 <div>
                 <!-- Input de varias opciones -->
@@ -132,5 +108,6 @@
 
     <!--Script de Bootstrap con CDN-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+     <script src="../js/contacto.js"></script>
 </body>
 </html> 
