--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         </header>
 
     <section>
+        <h3 id="pservicios">Ofrecemos trabajos y productos de la más alta calidad</h3>
         <div class="contenedor-index">
             <img src="img/index1.png" alt="">
             <p class="gray mt-5"> En TecniPC nos dedicamos al desarrollo de soluciones informáticas en sus diversas ramas con el fín de brindar el mayor sopote a las necesidades requeridas</p>
@@ -82,6 +83,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     
 
-
+    <script src="js/index.js"></script>
 </body>
 </html>
