--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -106,6 +106,10 @@
         Web creada por Adrián Fernández. Todos los derechos reservados.
     </footer>
 
+    //Sweet alert
+    <script src="sweetalert2.min.js"></script>
+    <link rel="stylesheet" href="sweetalert2.min.css">
+    
     <!--Script de Bootstrap con CDN-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
      <script src="../js/contacto.js"></script>
