--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -12,7 +12,9 @@
     <!--CSS Bootstrap-->
     <!--Linkeando bootstrap con CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-
+    <!-- CDN Sweet alert -->
+    <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@4/dark.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
     <!--CSS Propio-->
     <link rel="stylesheet" href="../css/styles.css">
     <title>TecniPC | Contacto</title>
@@ -64,7 +66,7 @@
 
         <!-- Formulario de contacto -->
         <form>
-            <fieldset id="formulario">
+            <fieldset id="mi-formulario">
                 <legend class="fuente">Formulario de contacto</legend>
                 <div>
                     <label for="nombre">Nombre y apellido</label>
@@ -94,8 +96,8 @@
 
                 <div>
                     <!--Botón para enviar los datos-->
-                    <input type="submit" value="Enviar mensaje" class="fuente-botones">
-                    <input type="reset" value="Comenzar de nuevo" class="fuente-botones">
+                    <input type="submit" value="Enviar mensaje" id="mi-boton">
+                    <input type="reset" value="Comenzar de nuevo" id="mi-boton">
                 </div>
             </fieldset>
         </form>
